--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "moment": "^2.17.1",
     "morgan": "^1.7.0",
     "mui": "^1.0.0",
+    "node": "0.0.0",
     "pg": "^6.1.2",
     "react": "^15.4.2",
     "react-chartjs-2": "^2.0.0",
@@ -69,9 +70,6 @@
   },
   "devDependencies": {
     "ava": "^0.17.0",
-    "inject-lr-script": "^2.1.0",
-    "livereload": "^0.6.0",
-    "sqlite3": "^3.1.8",
     "css-loader": "^0.26.1",
     "deep-freeze": "0.0.1",
     "eslint": "^3.14.1",
@@ -81,9 +79,13 @@
     "eslint-plugin-react": "^6.9.0",
     "eslint-plugin-standard": "^2.0.1",
     "foundation-sites": "6.2.0",
+    "inject-lr-script": "^2.1.0",
+    "livereload": "^0.6.0",
     "node-sass": "^4.5.0",
     "nodemon": "^1.11.0",
     "sass-loader": "^5.0.1",
-    "style-loader": "^0.13.1"
+    "sqlite3": "^3.1.8",
+    "style-loader": "^0.13.1",
+    "webpack": "^2.1.0-beta.25"
   }
 }
