--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "",
   "dependencies": {
+    "ava": "^0.17.0",
     "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
@@ -44,12 +45,13 @@
     "express-session": "^1.15.1",
     "foundation-sites": "^6.3.0",
     "history": "3.0.0",
+    "inject-lr-script": "^2.1.0",
     "knex": "^0.12.7",
+    "livereload": "^0.6.0",
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "morgan": "^1.7.0",
     "mui": "^1.0.0",
-    "node-js":"^6.10.0",
     "pg": "^6.1.2",
     "react": "^15.4.2",
     "react-chartjs-2": "^2.0.0",
@@ -62,6 +64,7 @@
     "redux": "^3.6.0",
     "sass-loader": "^5.0.1",
     "script-loader": "^0.7.0",
+    "sqlite3": "^3.1.8",
     "style-loader": "^0.13.1",
     "superagent": "^3.4.1",
     "url-parse": "^1.1.7",
@@ -69,8 +72,6 @@
     "webpack-dev-middleware": "^1.9.0"
   },
   "devDependencies": {
-    "ava": "^0.17.0",
-    "css-loader": "^0.26.1",
     "deep-freeze": "0.0.1",
     "eslint": "^3.14.1",
     "eslint-config-standard": "^6.2.1",
@@ -79,13 +80,9 @@
     "eslint-plugin-react": "^6.9.0",
     "eslint-plugin-standard": "^2.0.1",
     "foundation-sites": "6.2.0",
-    "inject-lr-script": "^2.1.0",
-    "livereload": "^0.6.0",
     "node-sass": "^4.5.0",
     "nodemon": "^1.11.0",
     "sass-loader": "^5.0.1",
-    "sqlite3": "^3.1.8",
-    "style-loader": "^0.13.1",
-    "webpack": "^2.1.0-beta.25"
+    "style-loader": "^0.13.1"
   }
 }
