specified npm version

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "Learn Te Reo",
   "engines": {
-    "node": "6.10.0"
+    "node": "6.10.0",
+    "npm":"4.3.0"
   },
   "main": "index.js",
   "scripts": {
