setup postgresql db in heroku

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://korero-mai.herokuapp.com"
+    "url": "https://github.com/janie-t/koreroMaiTest"
   },
   "keywords": [],
   "author": "",
