--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Learn Te Reo",
   "engines": {
     "node": "6.10.0",
-    "npm":"4.3.0"
+    "npm": "4.3.0"
   },
   "main": "index.js",
   "scripts": {
@@ -56,6 +56,7 @@
     "moment": "^2.17.1",
     "morgan": "^1.7.0",
     "mui": "^1.0.0",
+    "node-sass": "^4.5.0",
     "pg": "^6.1.2",
     "react": "^15.4.2",
     "react-chartjs-2": "^2.0.0",
