--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "webpack-dev-middleware": "^1.9.0"
   },
   "devDependencies": {
+    "css-loader": "^0.26.2",
     "deep-freeze": "0.0.1",
     "eslint": "^3.14.1",
     "eslint-config-standard": "^6.2.1",
