--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "node-sass": "^4.5.0",
     "nodemon": "^1.11.0",
     "sass-loader": "^5.0.1",
-    "style-loader": "^0.13.1"
+    "style-loader": "^0.13.1",
+    "webpack": "^1.14.0"
   }
 }
